--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
 h1 {
   font-size: 50px;
   margin: 0;
+  font-weight: bold;
 }
 
 .all-data {
@@ -46,6 +47,7 @@ strong {
 .temp {
   font-size: 100px;
   font-weight: 500;
+  margin-right: 5px;
 }
 
 .unit {
