--- a/src/App.css
+++ b/src/App.css
@@ -41,18 +41,20 @@ strong {
 
 .temp-icon {
   font-size: 70px;
-  margin: 20px 10px 0 0;
 }
 
 .temp {
   font-size: 100px;
+  line-height: 100px;
   font-weight: 500;
   margin-right: 5px;
 }
 
 .unit {
-  font-size: 30px;
-  margin-top: 25px;
+  display: inline;
+  font-size: 24px;
+  vertical-align: text-top;
+  margin-left: 5px;
 }
 
 .col {
