--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 
 .App {
   background-color: white;
-  max-width: 600px;
+  max-width: 650px;
   margin: 55px auto;
   padding: 25px 25px 15px 25px;
   border-radius: 15px;
@@ -37,6 +37,7 @@ strong {
 
 .temperature-block {
   display: flex;
+  padding-top: 5px;
 }
 
 .temp-icon {
